docs/process/v4_1/phase_6b/v12/zero_trust_gate_summary_v1.md
# Phase 6B v12 Zero Trust Gate Summary

Status: `PHASE_6B_V12_PRODUCTION_TICKET_PACK_PLANNING_DRAFT_READY_FOR_REVIEW`

## Current Final State Summary

Source components: 15
Sub-surfaces: 103
Seeds: 103
Extraction edges: 452
Extraction edge distribution: hard_dependency=444 / deferred_with_reason=0 / conditional_dependency=8 / manual_review_required=0
Distribution: {"hard_dependency":444,"deferred_with_reason":0,"conditional_dependency":8,"manual_review_required":0}
Hard dependency basis distribution: {'activation_lifecycle_required': 85, 'adl_hard_rule': 7, 'billing_or_evidence_required': 113, 'business_logic_hard_rule': 239}
Top-level seed dependency references: 444
Root seeds: 0
Root seed list:


## Gate Results

- PR #48/v11 input review: PASS.
- Blocker registry active count: 0.
- Final phase_doc_required hard basis: PASS; count=0.
- Production ticket planning candidate count: 103.
- Executable candidate count: 0.
- Ticket generation allowed: false.
- Ticket pack generation allowed: false.

Current root seeds:
